--- a/public/index-1.html
+++ b/public/index-1.html
@@ -15,11 +15,11 @@
     <body>
             <div class="menus">
                 <ul id="abc-menu"> 
-                    <li><a href="index-2.html">KAS MĒS ESAM?</a></li>
-                    <li><a href="index-3.html">DALĪBNIEKI</a></li>
-                    <li><a href="index-1.html">GALERIJA</a></li>
-                    <li><a href="index-4.html">PASĀKUMI</a></li>
-                    <li><a href="index-5.html">ATSAUKSMES</a></li>
+                    <li><a href="/grupas_info">KAS MĒS ESAM?</a></li>
+                    <li><a href="/dalibnieki">DALĪBNIEKI</a></li>
+                    <li><a href="/galerija">GALERIJA</a></li>
+                    <li><a href="/pasakumi">PASĀKUMI</a></li>
+                    <li><a href="/atsauksmes">ATSAUKSMES</a></li>
                 </ul>   
             </div>    
         <div class="Main_img">
