--- a/public/index-2.html
+++ b/public/index-2.html
@@ -14,15 +14,23 @@
     <body>
             <div class="menus">
                 <ul id="abc-menu"> 
-                    <li><a href="index-2.html">KAS MĒS ESAM?</a></li>
-                    <li><a href="index-3.html">DALĪBNIEKI</a></li>
-                    <li><a href="index-1.html">GALERIJA</a></li>
-                    <li><a href="index-4.html">PASĀKUMI</a></li>
-                    <li><a href="index-5.html">ATSAUKSMES</a></li>
+                    <li><a href="/grupas_info">KAS MĒS ESAM?</a></li>
+                    <li><a href="/dalibnieki">DALĪBNIEKI</a></li>
+                    <li><a href="/galerija">GALERIJA</a></li>
+                    <li><a href="/pasakumi">PASĀKUMI</a></li>
+                    <li><a href="/atsauksmes">ATSAUKSMES</a></li>
                 </ul>   
             </div>    
         <div class="Main_img">
             <img src="/images/TM.jpg" alt="Muzikanti">
+        </div>
+          <hr>
+        <div>
+            <h1 id="kas">  KAS MĒS ESAM? </h1> 
+            <p> Esam muzicējoši jaunieši, kuri satikās folkloras kopā <i>"Kokle"</i>.
+                Visi dzīvojam Teikā, no kurienes arī mūsu nosaukums. Esam muzikāli instrumentāla apvienība,
+                kuras dalībnieki katrs savā laikā pievienojās folkloras kopai Kokle. Gadu gaitā sapratām, 
+                ka esam labi sadziedājušies un saspēlējušies tāpēc nolēmām izveidot <i>"Teikas Muzikantus"</i>. </p>
         </div>
         <hr>
         <div class="darbiba">
@@ -60,7 +68,7 @@
         </div>
     
         <div class="footer">
-            <p>This page was created by Līna Sakārne in 2015</p>
+            <p>This page was created by Līna Sakārne in 2016</p>
         </div>
     </body>
 </html>
