--- a/public/index-1.html
+++ b/public/index-1.html
@@ -30,13 +30,13 @@
       
         <div class="pictures">
             <h1 id="atteli"> GALERIJA </h1>
-            <div class="thumbnails">
-                <img onmouseover="myPhoto.src=/images/IMG_9974.src" id='IMG_9974' src="/images/IMG_9974.jpg" alt="Muzikanti" />
-                <img onmouseover="myPhoto.src=/images/Cin.src" id='Cin' src="/images/Cin.jpg" alt="Muzikanti"/>
-                <img onmouseover="myPhoto.src=/images/ALA.src" id="ALA" src="/images/ALA.jpg" alt="Muzikanti"/>
-                <img onmouseover="myPhoto.src=/images/Meteni.src" id="Meteni" src="/images/Meteni.png" alt="Muzikanti"/>
-                <img onmouseover="myPhoto.src=/images/Valmiermuiza.src" id="Valmiermuiza" src="/images/Valmiermuiza.jpg" alt="Muzikanti"/>
-                <img onmouseover="myPhoto.src=/images/Kekatas.src" id="Kekatas" src="/images/Kekatas.jpg" alt="Muzikanti"/> 
+            <div class="thumbnails">           
+            <img onmouseover="myPhoto.src=IMG_9974.src" id='IMG_9974' src="IMG_9974.jpg" alt="Muzikanti" />
+                <img onmouseover="myPhoto.src=Cin.src" id='Cin' src="Cin.jpg" alt="Muzikanti"/>
+                <img onmouseover="myPhoto.src=ALA.src" id="ALA" src="ALA.jpg" alt="Muzikanti"/>
+                <img onmouseover="myPhoto.src=Meteni.src" id="Meteni" src="Meteni.png" alt="Muzikanti"/>
+                <img onmouseover="myPhoto.src=Valmiermuiza.src" id="Valmiermuiza" src="Valmiermuiza.jpg" alt="Muzikanti"/>
+                <img onmouseover="myPhoto.src=Kekatas.src" id="Kekatas" src="Kekatas.jpg" alt="Muzikanti"/> 
             </div>
         </div>   
         <div class='photos' >
